Added timers, take picture

--- a/plugin.xml
+++ b/plugin.xml
@@ -29,6 +29,10 @@
               <action android:name="android.intent.action.SET_ALARM" />
               <category android:name="android.intent.category.DEFAULT" />
           </intent-filter>
+          <intent-filter>
+               <action android:name="android.media.action.STILL_IMAGE_CAMERA" />
+               <category android:name="android.intent.category.DEFAULT" />
+           </intent-filter>
       </activity>
     </config-file>
 
