Modified plugin file

--- a/plugin.xml
+++ b/plugin.xml
@@ -25,14 +25,32 @@
 
     <config-file target="AndroidManifest.xml" parent="application/">
       <activity android:configChanges="orientation|keyboardHidden|keyboard|screenSize|locale" android:label="@string/activity_name" android:launchMode="singleTop" android:name="xyz.sheyar.plugin.VoiceActivity" android:theme="@android:style/Theme.DeviceDefault.NoActionBar" android:windowSoftInputMode="adjustResize">
+          <!-- set alarm -->
           <intent-filter>
               <action android:name="android.intent.action.SET_ALARM" />
               <category android:name="android.intent.category.DEFAULT" />
           </intent-filter>
+
+          <!-- set timer -->
+          <intent-filter>
+            <action android:name="android.intent.action.SET_TIMER" />
+            <category android:name="android.intent.category.DEFAULT" />
+          </intent-filter>
+
           <intent-filter>
                <action android:name="android.media.action.STILL_IMAGE_CAMERA" />
                <category android:name="android.intent.category.DEFAULT" />
            </intent-filter>
+           <intent-filter>
+              <action android:name="android.media.action.IMAGE_CAPTURE" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.VOICE" />
+          </intent-filter>
+          <intent-filter>
+              <action android:name="android.media.action.STILL_IMAGE_CAMERA" />
+              <category android:name="android.intent.category.DEFAULT" />
+              <category android:name="android.intent.category.VOICE" />
+          </intent-filter>
       </activity>
     </config-file>
 
@@ -45,7 +63,9 @@
     <source-file src="src/android/VoiceCommand.java" target-dir="src/xyz/sheyar/plugin"/>
     <source-file src="src/android/VoiceActivity.java" target-dir="src/xyz/sheyar/plugin"/>
     <source-file src="src/android/VoiceAction.java" target-dir="src/xyz/sheyar/plugin"/>
-    <source-file src="src/android/SetalarmVoiceEvent.java" target-dir="src/xyz/sheyar/plugin"/>
+    <source-file src="src/android/SetalarmVoiceAction.java" target-dir="src/xyz/sheyar/plugin"/>
+    <source-file src="src/android/SettimerVoiceAction.java" target-dir="src/xyz/sheyar/plugin"/>
+    <source-file src="src/android/StillImageVoiceAction.java" target-dir="src/xyz/sheyar/plugin"/>
     <source-file src="src/android/VoiceActionFactory.java" target-dir="src/xyz/sheyar/plugin"/>
   </platform>
 
